[package]
name         = "oxidized-worldgen"
version      = "0.1.0"
edition      = "2024"
authors      = ["Dogukan Metan <dogukanmetan@gmail.com>"]
license      = "MIT"
repository   = "https://github.com/oxidized-mc/worldgen"
homepage     = "https://github.com/oxidized-mc/worldgen"
rust-version = "1.85"
description  = "World generation framework — ChunkGenerator, FlatWorldConfig, ChunkStatus pipeline"
keywords     = ["minecraft", "oxidized-mc"]
categories   = ["game-development"]

[dependencies]
oxidized-chunks    = "0.1"
oxidized-registry  = "0.1"
oxidized-types     = "0.1"
oxidized-lighting  = "0.1"
oxidized-mc-types  = "0.1"
dashmap            = "6"
rayon              = "1"
thiserror          = "2"
tokio              = { version = "1", features = ["sync"] }
tokio-util         = { version = "0.7", features = ["rt"] }
tracing            = "0.1"

[dev-dependencies]
proptest = "1"

[patch.crates-io]
oxidized-chunks      = { path = "../chunks" }
oxidized-registry    = { path = "../registry" }
oxidized-mc-types    = { path = "../mc-types" }
oxidized-types       = { path = "../types" }
oxidized-lighting    = { path = "../lighting" }
oxidized-nbt         = { path = "../nbt" }
oxidized-compression = { path = "../compression" }
oxidized-crypto      = { path = "../crypto" }
oxidized-auth        = { path = "../auth" }
oxidized-codec       = { path = "../codec" }
oxidized-chat        = { path = "../chat" }
oxidized-transport   = { path = "../transport" }
oxidized-anvil       = { path = "../anvil" }
oxidized-commands    = { path = "../commands" }
oxidized-inventory   = { path = "../inventory" }
oxidized-physics     = { path = "../physics" }

[lints.rust]
missing_docs   = "warn"
unsafe_code    = "deny"
unused_imports = "warn"

[lints.clippy]
# Correctness — hard errors
correctness                = { level = "deny", priority = -1 }
# Performance and style — warnings
perf                       = { level = "warn", priority = -1 }
style                      = { level = "warn", priority = -1 }
complexity                 = { level = "warn", priority = -1 }
suspicious                 = { level = "warn", priority = -1 }
# Specific useful lints
unwrap_used                = "deny"
expect_used                = "deny"
panic                      = "deny"
print_stdout               = "deny"
print_stderr               = "deny"
needless_pass_by_value     = "warn"
redundant_clone            = "warn"
# Noisy lints intentionally suppressed
module_name_repetitions    = "allow"
must_use_candidate         = "allow"
cast_possible_truncation   = "allow"
cast_sign_loss             = "allow"
cast_possible_wrap         = "allow"
