[package]
name         = "oxidized-worldgen"
version      = "0.1.0"
edition      = "2024"
authors      = ["Dogukan Metan <dogukanmetan@gmail.com>"]
license      = "MIT"
repository   = "https://github.com/oxidized-mc/worldgen"
homepage     = "https://github.com/oxidized-mc/worldgen"
rust-version = "1.85"
description  = "World generation framework — ChunkGenerator, FlatWorldConfig, ChunkStatus pipeline"
keywords     = ["minecraft", "oxidized-mc"]
categories   = ["game-development"]

[dependencies]
oxidized-chunks      = { git = "https://github.com/oxidized-mc/chunks.git" }
oxidized-registry    = { git = "https://github.com/oxidized-mc/registry.git" }
oxidized-types       = { git = "https://github.com/oxidized-mc/types.git" }
oxidized-lighting    = { git = "https://github.com/oxidized-mc/lighting.git" }
oxidized-mc-types    = { git = "https://github.com/oxidized-mc/mc-types.git" }
dashmap            = "6"
rayon              = "1"
thiserror          = "2"
tokio              = { version = "1", features = ["sync"] }
tokio-util         = { version = "0.7", features = ["rt"] }
tracing            = "0.1"

[dev-dependencies]
proptest = "1"

[lints.rust]
missing_docs   = "warn"
unsafe_code    = "deny"
unused_imports = "warn"

[lints.clippy]
# Correctness — hard errors
correctness                = { level = "deny", priority = -1 }
# Performance and style — warnings
perf                       = { level = "warn", priority = -1 }
style                      = { level = "warn", priority = -1 }
complexity                 = { level = "warn", priority = -1 }
suspicious                 = { level = "warn", priority = -1 }
# Specific useful lints
unwrap_used                = "deny"
expect_used                = "deny"
panic                      = "deny"
print_stdout               = "deny"
print_stderr               = "deny"
needless_pass_by_value     = "warn"
redundant_clone            = "warn"
# Noisy lints intentionally suppressed
module_name_repetitions    = "allow"
must_use_candidate         = "allow"
cast_possible_truncation   = "allow"
cast_sign_loss             = "allow"
cast_possible_wrap         = "allow"

[patch."https://github.com/oxidized-mc/chunks.git"]
oxidized-chunks = { path = "../chunks" }

[patch."https://github.com/oxidized-mc/registry.git"]
oxidized-registry = { path = "../registry" }

[patch."https://github.com/oxidized-mc/mc-types.git"]
oxidized-mc-types = { path = "../mc-types" }

[patch."https://github.com/oxidized-mc/types.git"]
oxidized-types = { path = "../types" }

[patch."https://github.com/oxidized-mc/lighting.git"]
oxidized-lighting = { path = "../lighting" }

[patch."https://github.com/oxidized-mc/nbt.git"]
oxidized-nbt = { path = "../nbt" }

[patch."https://github.com/oxidized-mc/compression.git"]
oxidized-compression = { path = "../compression" }

[patch."https://github.com/oxidized-mc/crypto.git"]
oxidized-crypto = { path = "../crypto" }

[patch."https://github.com/oxidized-mc/auth.git"]
oxidized-auth = { path = "../auth" }

[patch."https://github.com/oxidized-mc/codec.git"]
oxidized-codec = { path = "../codec" }

[patch."https://github.com/oxidized-mc/chat.git"]
oxidized-chat = { path = "../chat" }

[patch."https://github.com/oxidized-mc/transport.git"]
oxidized-transport = { path = "../transport" }

[patch."https://github.com/oxidized-mc/anvil.git"]
oxidized-anvil = { path = "../anvil" }

[patch."https://github.com/oxidized-mc/commands.git"]
oxidized-commands = { path = "../commands" }

[patch."https://github.com/oxidized-mc/inventory.git"]
oxidized-inventory = { path = "../inventory" }

[patch."https://github.com/oxidized-mc/physics.git"]
oxidized-physics = { path = "../physics" }

