[package]
name         = "oxidized-worldgen"
version      = "0.1.0"
edition      = "2024"
authors      = ["Dogukan Metan <dogukanmetan@gmail.com>"]
license      = "MIT"
repository   = "https://github.com/oxidized-mc/worldgen"
homepage     = "https://github.com/oxidized-mc/worldgen"
rust-version = "1.85"
description  = "World generation framework — ChunkGenerator, FlatWorldConfig, ChunkStatus pipeline"
keywords     = ["minecraft", "oxidized-mc"]
categories   = ["game-development"]

[dependencies]
oxidized-chunks      = "0.1.0-dev"
oxidized-registry    = "0.1.0-dev"
oxidized-types       = "0.1.0-dev"
oxidized-lighting    = "0.1.0-dev"
oxidized-mc-types    = "0.1.0-dev"
dashmap            = "6"
rayon              = "1"
thiserror          = "2"
tokio              = { version = "1", features = ["sync"] }
tokio-util         = { version = "0.7", features = ["rt"] }
tracing            = "0.1"

[dev-dependencies]
proptest = "1"

[lints.rust]
missing_docs   = "warn"
unsafe_code    = "deny"
unused_imports = "warn"

[lints.clippy]
# Correctness — hard errors
correctness                = { level = "deny", priority = -1 }
# Performance and style — warnings
perf                       = { level = "warn", priority = -1 }
style                      = { level = "warn", priority = -1 }
complexity                 = { level = "warn", priority = -1 }
suspicious                 = { level = "warn", priority = -1 }
# Specific useful lints
unwrap_used                = "deny"
expect_used                = "deny"
panic                      = "deny"
print_stdout               = "deny"
print_stderr               = "deny"
needless_pass_by_value     = "warn"
redundant_clone            = "warn"
# Noisy lints intentionally suppressed
module_name_repetitions    = "allow"
must_use_candidate         = "allow"
cast_possible_truncation   = "allow"
cast_sign_loss             = "allow"
cast_possible_wrap         = "allow"

[patch.crates-io]
oxidized-anvil = { path = "../anvil" }
oxidized-auth = { path = "../auth" }
oxidized-chat = { path = "../chat" }
oxidized-chunks = { path = "../chunks" }
oxidized-codec = { path = "../codec" }
oxidized-commands = { path = "../commands" }
oxidized-compression = { path = "../compression" }
oxidized-crypto = { path = "../crypto" }
oxidized-inventory = { path = "../inventory" }
oxidized-lighting = { path = "../lighting" }
oxidized-mc-types = { path = "../mc-types" }
oxidized-nbt = { path = "../nbt" }
oxidized-physics = { path = "../physics" }
oxidized-registry = { path = "../registry" }
oxidized-transport = { path = "../transport" }
oxidized-types = { path = "../types" }
